--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@langchain/openai": "^0.6.14",
     "@types/cheerio": "^0.22.35",
+    "@types/mongoose": "^5.11.96",
     "@types/multer": "^2.0.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
     "langchain": "^0.3.35",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.19.1",
     "multer": "^2.0.2",
     "next": "15.5.4",
     "openai": "^6.3.0",
