feat: add farcaster, use biomejs formatter instead of eslint, move to src folder, add viem and wagmi

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,19 @@
-# OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+# OpenAI Configuration, get yours at https://platform.openai.com
+OPENAI_API_KEY="your_openai_api_key_here"
 
-# Next.js Configuration
-NEXT_PUBLIC_API_URL=http://localhost:3000
-
-# Database Configuration
+# Database Configuration, get yours at https://cloud.mongodb.com
 MONGODB_URI=your_mongodb_connection_string_here
 
-NVIDIA_API_KEY=your_nvidia_api_key_here
+# Farcaster Manifest, generate yours at https://farcaster.xyz/~/developers/new or in farcaster mobile app Settings > Developer > Domains > insert website hostname > Generate domain manifest
+NEXT_PUBLIC_URL="https://tunnel.example.com"
+NEXT_PUBLIC_FARCASTER_HEADER="header"
+NEXT_PUBLIC_FARCASTER_PAYLOAD="payload"
+NEXT_PUBLIC_FARCASTER_SIGNATURE="signature"
+# Base build MiniApp https://www.base.dev/apps?addApp=true
+NEXT_PUBLIC_BASE_BUILDER_ADDRESS="0x"
 
-MONGODB_USERNAME=your_mongodb_username_here
-MONGODB_PASSWORD=your_mongodb_password_here
+# NEYNAR get yours for free at https://dev.neynar.com
+NEYNAR_API_KEY="NEYNAR_API_DOCS"
+
+# JWT SECRET, get yours with `openssl rand -base64 32`
+JWT_SECRET=""
