--- a/package.json
+++ b/package.json
@@ -6,18 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "format": "biome format --write",
+    "format:check": "biome check",
+    "lint": "biome check ."
   },
   "dependencies": {
+    "@farcaster/miniapp-core": "^0.4.0",
+    "@farcaster/miniapp-node": "^0.1.10",
+    "@farcaster/miniapp-sdk": "^0.2.0",
+    "@farcaster/miniapp-wagmi-connector": "^1.1.0",
+    "@farcaster/quick-auth": "^0.0.8",
+    "@langchain/core": "^0.3.78",
     "@langchain/openai": "^0.6.14",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@t3-oss/env-nextjs": "^0.13.8",
+    "@tanstack/react-query": "^5.90.2",
     "@types/cheerio": "^0.22.35",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^2.0.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "jiti": "~1.21.7",
+    "jose": "^6.1.0",
+    "ky": "^1.11.0",
     "langchain": "^0.3.35",
+    "lucide-react": "^0.545.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.1",
     "multer": "^2.0.2",
@@ -26,17 +46,22 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sharp": "^0.34.4",
-    "uuid": "^13.0.0"
+    "tailwind-merge": "^3.3.1",
+    "uuid": "^13.0.0",
+    "viem": "^2.38.1",
+    "wagmi": "^2.18.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@biomejs/biome": "^2.2.5",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "pino-pretty": "^13.1.2",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5",
+    "ultracite": "^5.6.2"
   }
 }
