--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^17.2.3",
     "jiti": "~1.21.7",
     "jose": "^6.1.0",
+    "jsonrepair": "^3.13.1",
     "ky": "^1.11.0",
     "langchain": "^0.3.35",
     "lucide-react": "^0.545.0",
