--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@langchain/core": "^0.3.78",
     "@langchain/openai": "^0.6.14",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@t3-oss/env-nextjs": "^0.13.8",
@@ -49,6 +51,7 @@
     "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
+    "vaul": "^1.1.2",
     "viem": "^2.38.1",
     "wagmi": "^2.18.0",
     "zod": "^4.1.12"
