add console log using eruda

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ OPENAI_API_KEY="your_openai_api_key_here"
 # Database Configuration, get yours at https://cloud.mongodb.com
 MONGODB_URI=your_mongodb_connection_string_here
 
+# Eruda console log
+NEXT_PUBLIC_APP_ENV="development" # development or production
+
 # Farcaster Manifest, generate yours at https://farcaster.xyz/~/developers/new or in farcaster mobile app Settings > Developer > Domains > insert website hostname > Generate domain manifest
 NEXT_PUBLIC_URL="https://tunnel.example.com"
 NEXT_PUBLIC_FARCASTER_HEADER="header"
